[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/PlayerDeck.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/EnemyDeck.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Game.gd" type="Script" id=3]
[ext_resource path="res://scenes/PlayerCard.tscn" type="PackedScene" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="PlayerDeck" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 217 )

[node name="EnemyDeck" parent="." instance=ExtResource( 2 )]
position = Vector2( 320, 80 )

[node name="PlayerCard" parent="." instance=ExtResource( 4 )]
position = Vector2( 320, 314 )
